# ARMOR_OWLOOP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  launch.launch  package.xml
armor_py_client_api/: CMakeLists.txt  README.md  package.xml
armor_py_client_api/launch/: armorTest.launch
armor_py_client_api/scripts/armor_api/: armor_client.py
armor_py_client_api/test/: inferred_test.owl
injected_armor/: 1CMakeLists.txt  1settings.gradle  CMakeLists.txt  build.gradle  package.xml  settings.gradle
injected_armor/aaa/: CMakeLists.txt  build.gradle  settings.gradle
injected_armor/amor/: README.MD  build.gradle  depndences LICENCES
injected_armor/amor/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  serialized-form.html
injected_armor/amor/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
injected_armor/amor/doc/it/emarolab/amor/examples/: Benchmarks.html  BufferingTest.html  OWLRefDebuggingExample.html  OWLRefEnquirerExample.html  OWLRefInOutExample.html  OWLRefManipulationExample.html  OWLRefUtilityExample.html  package-frame.html  package-summary.html  package-tree.html
injected_armor/amor/doc/it/emarolab/amor/owlDebugger/: FileManager.html  Logger.LoggerFlag.html  Logger.html  ReasonerMonitor.html  package-frame.html  package-summary.html  package-tree.html
injected_armor/armor/: README.MD  build.gradle
injected_armor/armor/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  package-list
injected_armor/armor/doc/index-files/: index-1.html  index-2.html  index-3.html  index-4.html  index-5.html
injected_armor/armor/doc/it/emarolab/armor/: ARMORCommandsManipulation.html  ARMORCommandsQuery.html  ARMORCommandsUtils.html  ARMORMainService.html  package-frame.html  package-summary.html  package-tree.html
injected_armor/owloop/: README.md  build.gradle
injected_armor/owloop/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
injected_armor/owloop/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
injected_armor/owloop/src/test/resources/: dataPropertyTest.owl  objectPropertyTest.owl
injected_armor/ros_java_module_name/: build.gradle
injected_armor/sit/: README.MD  build.gradle
injected_armor/sit/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
injected_armor/sit/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
injected_armor/sit/doc/it/emarolab/sit/: SITBase.CLASS.html  SITBase.DATA_PROPERTY.html  SITBase.INDIVIDUAL.html  SITBase.OBJECT_PROPERTY.html  SITBase.VOCABOLARY.html  SITBase.html  SpatialSimplifier.html  Test.html  package-frame.html  package-summary.html  package-tree.html
injected_armor/sit/resources/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  index-all.html  overview-frame.html  overview-summary.html  overview-tree.html
injected_armor/sit/resources/t_box/: empty-scene.owl
injected_armor_msgs/: CMakeLists.txt  README.md  package.xml
injected_armor_msgs/msg/: ArmorDirectiveRes.msg
injected_armor_msgs/srv/: ArmorDirective.srv  ArmorDirectiveList.srv
ros_java_msgs/: CMakeLists.txt  package.xml
ros_java_msgs/msg/: custom.msg
(+346 files in other folders)
