<?xml version="1.0"?>
<package>
  <name>armor_msgs</name>
  <version>1.0.0</version>
  <description>The armor_msgs package</description>

  
  <maintainer email="alessio.capitanelli@gmail.com">Alessio Capitanelli</maintainer>
  <author email="alessio.capitanelli@gmail.com">Alessio Capitanelli</author>
  <url type="website">https://github.com/EmaroLab</url> 
  
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>