<?xml version="1.0"?>
<package>
  <name>injected_armor_msgs</name>
  <version>2.0.0</version>
  <description>The armor_msgs injected with OWLOOP and SIT packages</description>

  
  <maintainer email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</maintainer>
  <author email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</author>
  <url type="website">https://github.com/buoncubi/injected_armor_pkgs</url> 
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
