<?xml version="1.0"?>
<package>
  <name>ros_java_msgs</name>
  <version>0.1.0</version>
  <description>The ROSJava package template messages</description>

  
  <maintainer email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</maintainer>
  <author email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</author>
  <url type="website">https://gitlab.com/buoncubi/ros_java_template_pkg</url>
  <license>GNUv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
